RESOLVED FIXED226892
REGRESSION (r277820): Trackpad interaction in Web Content is not working on iOS or macCatalyst
https://bugs.webkit.org/show_bug.cgi?id=226892
Summary REGRESSION (r277820): Trackpad interaction in Web Content is not working on i...
Tim Horton
Reported 2021-06-10 11:57:54 PDT
REGRESSION (r277820): Trackpad interaction in Web Content is not working on iOS or macCatalyst
Attachments
Patch (2.82 KB, patch)
2021-06-10 11:58 PDT, Tim Horton
no flags
Tim Horton
Comment 1 2021-06-10 11:58:12 PDT
Tim Horton
Comment 2 2021-06-10 11:58:14 PDT
Ryan Haddad
Comment 3 2021-06-10 13:47:24 PDT
Comment on attachment 431104 [details] Patch Clearing flags on attachment: 431104 Committed r278727 (238690@main): <https://commits.webkit.org/238690@main>
Ryan Haddad
Comment 4 2021-06-10 13:47:26 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.