Cherry-pick r278727. rdar://problem/79161529

REGRESSION (r277820): Trackpad interaction in Web Content is not working on iOS or macCatalyst
    https://bugs.webkit.org/show_bug.cgi?id=226892
    <rdar://79080057>

    Patch by Tim Horton <timothy_horton@apple.com> on 2021-06-10
    Reviewed by Wenson Hsieh.

    * UIProcess/ios/WKMouseGestureRecognizer.h:
    * UIProcess/ios/WKMouseGestureRecognizer.mm:
    Stop inheriting from UIHoverGestureRecognizer; since r277820
    removed our override of _shouldReceiveTouch, and the default implementation
    always says NO, r277820 broke trackpad-origiating mouse events (but
    left hover working, since that is not a touch).

    Canonical link: https://commits.webkit.org/238690@main
    git-svn-id: https://svn.webkit.org/repository/webkit/trunk@278727 268f45cc-cd09-0410-ab3c-d52691b4dbfc

Canonical link: https://commits.webkit.org/238671.2@safari-612.1.18-branch
git-svn-id: https://svn.webkit.org/repository/webkit/branches/safari-612.1.18-branch@278735 268f45cc-cd09-0410-ab3c-d52691b4dbfc